--- a/Ra3Profiler/CMakeLists.txt
+++ b/Ra3Profiler/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(fmt CONFIG REQUIRED)
 find_package(wil CONFIG REQUIRED)
 
 target_sources(Ra3Profiler PUBLIC "Injection.ixx")
-target_sources(Ra3Profiler PRIVATE "Injection.cpp" "Profiler.ixx")
+target_sources(Ra3Profiler PRIVATE "Injection.cpp" "Abstractions.ixx" "Gui.ixx" "Profiler.ixx")
 target_compile_definitions(Ra3Profiler PRIVATE LANYI_RA3PROFILER_BUILDING_DLL=1)
 target_include_directories(Ra3Profiler PRIVATE 
 	${CPP_HTTPLIB_INCLUDE_DIRS}
